src/jamtaba/resources/jamtaba.css
/* ... */
QPushButton:hover#soloButton, QPushButton:hover#muteButton{
background-color: rgba(255, 255, 255, 80);
color: rgba(0, 0, 0, 200);
}

QPushButton:checked#soloButton{
background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(90, 255, 62), stop:1 rgb(0, 175, 0));
color: black;
}

QPushButton:hover:checked#soloButton {
background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(110, 255, 82), stop:1 rgb(30, 195, 30));
color: gray;
}

QPushButton:checked#muteButton {
background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(255, 90, 62), stop:1 rgb(175, 0, 0));
color: lightgray;
}

QPushButton:hover:checked#muteButton {
background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(255, 110, 122), stop:1 rgb(120, 0, 0));
color: white;
}

/* TRACK GROUPs */

TrackGroupView {
    border: none;
    background-color: none;
    border-radius: 3px;
}

TrackGroupView > #topPanel{
    background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(245, 245, 245), stop:0.06 rgb(220, 220, 220), stop:1 rgb(100, 100, 100));
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
}

TrackGroupView[unlighted="true"] > #topPanel  {
   background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(180, 180, 180), stop:1 rgb(70, 70, 70));
}

TrackGroupView #groupNameField {
    margin-bottom: 10px;
    margin-top: 10px;
    font-size: 11px;
    font-weight: normal;
}


/* LOCAL TRACK GROUP */
LocalTrackGroupView{
    border: none;
}

LocalTrackGroupView[highlighted="true"] {
    border: 1px solid white;

}

LocalTrackGroupView  #toolButton {
    background-color: none;
    background-image: url(':/images/gear.png');
    background-repeat: none;
    background-position: center center;
    border: none;
    padding: 0px;
    margin: 0px;
    width: 14px;
    height: 14px;
}

LocalTrackGroupView   #toolButton:hover{
    background-image: url(':/images/gear-hover.png');
}
/* ++++++++++++++++++++++++++++++++++ */

BaseTrackView .QLabel#labelPanR, BaseTrackView .QLabel#labelPanL{
color: rgba(0, 0, 0, 60);
}

BaseTrackView > .QFrame#topSeparator{
background-color: rgb(210, 210, 210);
}

BaseTrackView > .QFrame#panSectionSeparator{
background-color: rgb(180, 180, 180);
}

/*+++++++++++++++++++++++++++++++++++++++++++++++*/
LocalTrackView, NinjamTrackView{
    border: none;
}

LocalTrackView[faderOnly="true"]{
    background: none;

}

LocalTrackView[highlighted="true"]{
    background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(230, 230, 230), stop:1 rgb(140, 140, 140));
}

LocalTrackView #inputPanel{
    padding: 2px;
    background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1, stop:0 rgba(0, 0, 0, 60), stop:1 rgba(0, 0, 0, 140));
    border-radius: 3px;
    border: none;
}

BaseTrackView[unlighted="false"] #inputPanel{
    border: 1px outset rgb(80,80,80);
}

LocalTrackView #inputPanel:hover{
    background-color: qlineargradient(x1:0, y1:0.4, x2:0, y2:1, stop:0 rgba(0, 0, 0, 20), stop:1 rgba(0, 0, 0, 40));
}

LocalTrackView #inputSelectionIcon{
    border: none;
    margin: 0px;
    padding: 0px;
    max-width: 22px;
    min-width: 22px;
    min-height: 22px;
    background-position: center;
    background-repeat: none;
}

LocalTrackView #inputSelectionButton{
    background-color: none;
    background-image: url(':/images/arrow-down.png');
    background-repeat: none;
    background-position: center right;
    border: none;
    color: rgba(255,255, 255, 160);
    font-size: 9px;
    text-align: left;
    margin: 0px;
    padding-left: 2px;
    padding-right: 2px;
}
/*+++++++++++++++++++++++++++++++++++++++++++++++*/

/* NINJAM */

NinjamRoomWindow #licenceButton{
    background-color: rgba(0, 0, 0, 8);
    border: 1px solid rgba(0, 0,0, 12);
    border-radius: 3px;
    background-image: url(':/images/licence.png');
    background-position: center center;
    background-repeat: none;
    min-height: 20px;
    min-width: 28px;
    margin-right: 12px;
}

NinjamRoomWindow #licenceButton:hover{
    background-color: rgba(0, 0, 0, 30);
    border: 1px solid rgba(0, 0, 0, 40);

}

NinjamRoomWindow #labelRoomName{
    font-size: 11px;
    font-weight: bold;
    margin-left: 32px;/* shift from right side to compensate licence button and appears in center */
}

NinjamTrackView > .QLabel#channelName{
    border: 1px solid rgba(0, 0, 0, 25);
    qproperty-alignment: AlignCenter;
    background-color: rgba(0, 0, 0, 20);
    border-radius: 2px;
    padding-top: 3px;
    padding-bottom: 3px;
    font-size: 10px;
    color: rgb(80, 80, 80);
}

NinjamRoomWindow TrackGroupView #groupNameField{
    border-radius: 3px;
    background-color: rgba(255,255, 255, 120);
    border-color: rgb(150, 150, 150);
    color: black;
    qproperty-alignment: AlignCenter;

}

NinjamRoomWindow TrackGroupView #countryLabel{
    color: rgb(210, 210, 210);
    qproperty-alignment: AlignCenter;
    font-size: 11px;
}

NinjamRoomWindow TrackGroupView{
    border-left: 1px solid rgb(200, 200, 200);
    border-top: 1px solid qlineargradient(x1:0, y1:0, x2:1, y2:0,
        stop:0 rgb(250, 250, 250),
        stop:1 rgb(230, 230, 230)
    );
    border-right: 1px solid qlineargradient(x1:0, y1:0, x2:0, y2:1,
        stop:0 rgb(145, 145, 145),
        stop:1 rgb(77, 77, 77)
    );
    border-bottom: 1px solid rgb(69,69,69);
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
        stop:0      rgba(0, 0, 0, 0),
        stop:0.2    rgb(127,127,127)
        stop:1      rgb(127,127,127)
    );

    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
}


NinjamRoomWindow TrackGroupView #groupNameField {
    margin-bottom: 3px;
    margin-top: 3px;
}

NinjamPanel{
   /*
     background-color: qlineargradient(x1:0, y1:0.55, x2:0, y2:0.99, stop:0 rgba(0,0, 0, 0), stop:0.8 rgba(0, 0, 0, 25), stop:1 rgba(0, 0, 0, 55));
    border-radius: 3px;
    border: none;
    min-height: 100px;
    border-bottom: 1px solid rgba(0, 0, 0, 50);
*/
}
/* ... */

